<resources>
    <string name="app_name">Indeepen</string>
    <string name="action_settings">Settings</string>
    <string name="fan">Fan+</string>
    <string name="imissyou">I miss you</string>
    <string name="like">좋아요</string>
    <string name="comment">댓글</string>
    <string name="option">옵션</string>

    <string name="myfans">My Fan들</string>
    <string name="myartists">My 예술가들</string>

    <string name="emo_all">모든감정</string>
    <string name="emo_empty">감정없음</string>
    <string name="emo_happy">기쁨</string>
    <string name="emo_love">사랑</string>
    <string name="emo_sad">슬픔</string>
    <string name="emo_angry">화남</string>

    <string name="cate_all">모든분야</string>
    <string name="cate_paint">그림</string>
    <string name="cate_picture">사진</string>
    <string name="cate_music">음악</string>
    <string name="cate_video">영상예술</string>
    <string name="cate_culture">문화</string>

    <string name="fan_emotion">감정</string>
    <string name="fan_category">분야</string>

    <string name="space_location">공간위치</string>
    <string name="space_revome">공간삭제</string>

    <string name="action_search">검색</string>
    <string name="action_select">선택</string>
    <string name="action_upload">등록</string>

    <string name="text_hint">텍스트를 입력하세요.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
