<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="@string/cate_all"
        android:id="@+id/pop_cate_all"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="@string/cate_paint"
        android:id="@+id/pop_cate_paint"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/pop_cate_all" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="@string/cate_picture"
        android:id="@+id/pop_cate_picture"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/pop_cate_paint" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="@string/cate_music"
        android:id="@+id/pop_cate_music"
        android:layout_below="@+id/pop_cate_all"
        android:layout_alignParentStart="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="@string/cate_video"
        android:id="@+id/pop_cate_video"
        android:layout_below="@+id/pop_cate_paint"
        android:layout_toEndOf="@+id/pop_cate_all" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="@string/cate_culture"
        android:id="@+id/pop_cate_culture"
        android:layout_below="@+id/pop_cate_picture"
        android:layout_toEndOf="@+id/pop_cate_video" />
</RelativeLayout>