<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.04">

        <TextView
            android:id="@+id/text_image_single_nick1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="Small Text"
            android:visibility="gone"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/text_image_single_comm1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/text_image_single_nick1"
            android:text="Small Text"
            android:visibility="gone"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/text_image_single_nick2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/text_image_single_nick1"
            android:text="Small Text"
            android:visibility="gone"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/text_image_single_comm2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_image_single_comm1"
            android:layout_toEndOf="@+id/text_image_single_nick2"
            android:text="Small Text"
            android:visibility="gone"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.03">

        <TextView
            android:id="@+id/text_image_single_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/like"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_alignTop="@+id/text_image_single_comm"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/text_image_single_comm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="34dp"
            android:text="@string/comment"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_alignTop="@+id/text_image_single_option"
            android:layout_toEndOf="@+id/text_image_single_like" />

        <TextView
            android:id="@+id/text_image_single_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

</LinearLayout>