<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="380dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15">

        <ImageView
            android:layout_width="@dimen/my_profile_thumb"
            android:layout_height="@dimen/my_profile_thumb"
            android:id="@+id/img_image_single_thpro"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:scaleType="centerCrop"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Small Text"
            android:id="@+id/text_image_single_artist"
            android:layout_alignTop="@+id/img_image_single_thpro"
            android:layout_toEndOf="@+id/img_image_single_thpro" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Small Text"
            android:id="@+id/text_image_single_date"
            android:layout_below="@+id/img_image_single_emotion"
            android:layout_toEndOf="@+id/img_image_single_thpro" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Small Text"
            android:id="@+id/text_image_single_text"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true" />

        <ImageView
            android:layout_width="@dimen/my_emotion"
            android:layout_height="@dimen/my_emotion"
            android:id="@+id/img_image_single_emotion"
            android:layout_alignTop="@+id/text_image_single_artist"
            android:layout_alignParentEnd="true"
            android:scaleType="centerInside"/>
    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/img_image_single_contents"
        android:layout_weight="0.3"
        android:scaleType="centerCrop"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.06">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Small Text"
            android:id="@+id/text_image_single_nick1"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Small Text"
            android:id="@+id/text_image_single_comm1"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/text_image_single_nick1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Small Text"
            android:id="@+id/text_image_single_nick2"
            android:layout_below="@+id/text_image_single_nick1"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Small Text"
            android:id="@+id/text_image_single_comm2"
            android:layout_below="@+id/text_image_single_comm1"
            android:layout_toEndOf="@+id/text_image_single_nick2" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.05">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/like"
            android:id="@+id/text_image_single_like" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/comment"
            android:id="@+id/text_image_single_comm"
            android:layout_alignParentTop="true"
            android:layout_marginStart="34dp"
            android:layout_toEndOf="@+id/text_image_single_like" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/option"
            android:id="@+id/text_image_single_option"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>
</LinearLayout>