<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/view_blog_intro"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.release.indeepen.blog.BlogIntroView">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="302dp"
        android:layout_gravity="center_horizontal|bottom"
        android:padding="0dp">

        <ImageView
            android:id="@+id/img_blog_background"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_gravity="center_horizontal|top"
            android:padding="0dp"
            android:scaleType="centerCrop"
            android:src="@drawable/backsample" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_weight="0.43"
            android:padding="0dp">


        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:orientation="horizontal"
            android:padding="0dp">

            <Button
                android:id="@+id/btn_tab_art"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:layout_weight="1"
                android:padding="0dp"
                android:text="예술" />

            <Button
                android:id="@+id/btn_tab_favorite"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:layout_weight="1"
                android:padding="0dp"
                android:text="좋아요" />

            <Button
                android:id="@+id/btn_tab_culture"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:layout_weight="1"
                android:padding="0dp"
                android:text="문화정보" />

            <Button
                android:id="@+id/btn_tab_collabo"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:layout_weight="1"
                android:padding="0dp"
                android:text="협력" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="166dp"
            android:layout_gravity="center_horizontal|bottom"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_blog_thProfile"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal|top"
                android:src="@drawable/images"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />


            <Button
                android:id="@+id/btn_fanList"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:text="@string/fan"
                android:layout_above="@+id/text_fan_count"
                android:layout_toStartOf="@+id/img_blog_thProfile" />

            <Button
                android:id="@+id/btn_imissyou"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_above="@+id/text_imissyou_count"
                android:layout_marginLeft="15dp"
                android:layout_toEndOf="@+id/img_blog_thProfile"
                android:text="@string/imissyou" />


            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:text="Small Text"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_below="@+id/text_imissyou_count"
                android:layout_centerHorizontal="true" />

            <TextView
                android:id="@+id/text_fan_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/img_blog_thProfile"
                android:layout_alignEnd="@+id/btn_fanList"
                android:text="Small Text"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/text_imissyou_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/img_blog_thProfile"
                android:layout_alignStart="@+id/btn_imissyou"
                android:text="Small Text"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </RelativeLayout>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/space_revome"
            android:id="@+id/btn_space_revome"
            android:visibility="invisible"
            android:layout_gravity="right|top" />

    </FrameLayout>

</FrameLayout>
